src/objects/Data_Change_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Values__c</fullName>
        <label>New Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_values__c</fullName>
        <label>Old values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Data_Change_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>testobject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TestObject</label>
        <referenceTo>TestObject__c</referenceTo>
        <relationshipLabel>DataChangeActivities</relationshipLabel>
        <relationshipName>DataChangeActivities_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Data Change Activity</label>
    <nameField>
        <label>Data Change Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Change Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>